force-app/main/default/objects/Theater__c/Theater__c.object-meta.xml
<CustomObject>
    <label>Theater</label>
    <nameField>
        <label>Theater Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Theaters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>