force-app/main/default/objects/Theater__c/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <formula>Address__c &amp; &quot;, &quot; &amp; City__c &amp; &quot;, &quot; &amp; State__c &amp; &quot; &quot; &amp; Postal_Code__c &amp; &quot;, &quot; &amp; Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>