force-app/main/default/objects/Theater__c/fields/Number_of_Rows__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Rows__c</fullName>
    <label>Number of Rows</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>10</defaultValue>
    <description>Number of rows in the theater</description>
    <required>true</required>
</CustomField>