force-app/main/default/objects/Theater__c/fields/Seat_Layout_Type__c.field-meta.xml
<CustomField>
    <fullName>Seat_Layout_Type__c</fullName>
    <label>Seat Layout Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>IMAX</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Type of seat layout for the theater</description>
    <required>true</required>
</CustomField>