force-app/main/default/objects/Theater__c/fields/Seats_Per_Row__c.field-meta.xml
<CustomField>
    <fullName>Seats_Per_Row__c</fullName>
    <label>Seats Per Row</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>10</defaultValue>
    <description>Number of seats per row in the theater</description>
    <required>true</required>
</CustomField>