force-app/main/default/objects/Theater__c/fields/Theater_API_ID__c.field-meta.xml
<CustomField>
    <fullName>Theater_API_ID__c</fullName>
    <externalId>true</externalId>
    <label>Theater API ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>