force-app/main/default/objects/Theater__c/fields/Total_Screens__c.field-meta.xml
<CustomField>
    <fullName>Total_Screens__c</fullName>
    <label>Total Screens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>