force-app/main/default/objects/Theater__c/listViews/All_Active_Theaters.listView-meta.xml
<ListView>
    <fullName>All_Active_Theaters</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Phone__c</columns>
    <columns>Total_Screens__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Theaters</label>
</ListView>